# hs2025

./: README.md  test.html
backend/: Cargo.toml
backend/assets/: cruck.glb
backend/src/: game.rs  main.rs  test.html  ws_server.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  ControlsDesktop.jsx  ControlsMobile.jsx
